--- a/front/package.json
+++ b/front/package.json
@@ -28,6 +28,7 @@
     "@angular/platform-server": "^5.2.8",
     "@angular/router": "^5.2.8",
     "core-js": "^2.4.1",
+    "d3": "^5.0.0",
     "express": "^4.16.2",
     "hammerjs": "^2.0.8",
     "rxjs": "^5.5.2",
@@ -38,6 +39,7 @@
     "@angular/cli": "^1.7.3",
     "@angular/compiler-cli": "^5.2.8",
     "@angular/language-service": "^5.2.8",
+    "@types/d3": "^5.0.0",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "^6.0.102",
